# agent-router

./: .gitignore  README.md  docker-compose.yml  go.mod  go.sum
agent-sdk/: pyproject.toml
agent-sdk/agent_sdk/: __init__.py  base.py  client.py  code_nav.py  local_tools.py  types.py
agents/example/: agent.py  simulate_pipeline.py
cmd/server/: main.go
configs/: agents.yaml  server.yaml
internal/adapter/github/: client.go
internal/adapter/memory/: cache.go
internal/adapter/postgres/: db.go
internal/domain/agent/: agent.go
internal/domain/event/: event.go
internal/domain/pipeline/: pipeline.go  pipeline_test.go
internal/domain/project/: project.go
internal/domain/prompt/: prompt.go
internal/domain/review/: review.go
internal/domain/task/: task.go  task_test.go
internal/domain/thread/: thread.go
internal/integration/: pipeline_test.go
internal/mocks/: mock_agent_notifier.go  mock_agent_repo.go  mock_distributor.go  mock_eventbus.go  mock_locker.go  mock_project_repo.go  mock_prompt_repo.go  mock_role_notifier.go  mock_task_repo.go  mock_thread_repo.go
internal/port/agent/: agent.go  availability.go
internal/port/cache/: cache.go
internal/port/distributor/: distributor.go
internal/port/eventbus/: eventbus.go
internal/port/git/: git.go
internal/port/locker/: locker.go
internal/port/notifier/: agent.go  role.go
internal/testutil/: db.go  notifier.go
internal/transport/: middleware.go  router.go
internal/wire/: app.go  reaper.go
scripts/: curl_commands.md  e2e_test.sh  test_v1_rest.sh
web/: package-lock.json  package.json
(+69 files in other folders)
